--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "mm3-digital",
+  "name": "agrisur",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "db:init": "prisma migrate dev --name init",
+    "db:reset": "prisma generate && prisma migrate reset",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:format": "prisma format",
+    "db:seed": "ts-node prisma/seed.ts",
     "str": "stripe listen --forward-to localhost:3000/webhooks/stripe",
     "lint": "next lint",
     "email:dev": "cp .env ./node_modules/react-email && email dev --dir src/email --port 3001",
@@ -53,19 +60,26 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.11.9",
+    "input-otp": "^1.4.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "recharts": "^2.12.7",
+    "react-resizable-panels": "^3.0.3",
+    "recharts": "2.15.4",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
     "stripe": "^17.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
+    "vaul": "^1.1.2",
     "ws": "^8.18.0",
     "zustand": "^4.5.5"
   },
