--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:format": "prisma format",
+    "db:studio": "prisma studio",
     "db:seed": "ts-node prisma/seed.ts",
     "str": "stripe listen --forward-to localhost:3000/webhooks/stripe",
     "lint": "next lint",
