--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "db:format": "prisma format",
     "db:studio": "prisma studio",
     "db:seed": "ts-node prisma/seed.ts",
-    "str": "stripe listen --forward-to localhost:3000/webhooks/stripe",
+    "str": "stripe listen --forward-to localhost:3000/api/webhooks/stripe",
     "lint": "next lint",
     "email:dev": "cp .env ./node_modules/react-email && email dev --dir src/email --port 3001",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@arcjet/next": "1.0.0-beta.9",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.21.1",
@@ -57,6 +58,7 @@
     "@tiptap/pm": "^2.8.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
+    "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -68,6 +70,7 @@
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.5",
     "react": "^18",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18",
@@ -88,6 +91,7 @@
     "@eslint/js": "^9.13.0",
     "@react-email/components": "^0.0.25",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.12",
